Fix: Can't test if it is actually fixed, but bug on mobile Safari menu causing top and bottom to go opaque. Take 3

--- a/src/components/layout/Header/Header.module.css
+++ b/src/components/layout/Header/Header.module.css
@@ -155,7 +155,6 @@
   position: absolute;
   top: calc(env(safe-area-inset-top) - 2rem);
   left: -1rem;
-  background: color-mix(in srgb, var(--background), transparent 20%);
   backdrop-filter: blur(24px);
   z-index: -1;
   transition: all 400ms cubic-bezier(0.4, 0, 0.2, 1);
